# fastly-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  sig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: pack.sh  publish.sh  publish_env.sh
.github/workflows/: ci-release.yaml
docs/: AccessKey.md  AccessKeyResponse.md  Acl.md  AclApi.md  AclEntry.md  AclEntryApi.md  AclEntryResponse.md  AclEntryResponseAllOf.md  AclResponse.md  AclResponseAllOf.md  AclsInComputeApi.md  AiAcceleratorResponseBodyEnable.md  AiAcceleratorResponseCustomer.md  AiAcceleratorResponseCustomerCustomer.md  AiAcceleratorResponseLinks.md  AiAcceleratorResponseLinksLinks.md  AiAcceleratorResponseProduct.md  AiAcceleratorResponseProductProduct.md  ApexRedirect.md  ApexRedirectAllOf.md  ApexRedirectApi.md  ApiDiscoveryResponseBodyGetAllServices.md  ApiDiscoveryResponseCustomer.md  ApiDiscoveryResponseCustomerCustomer.md  ApiDiscoveryResponseEnable.md  ApiDiscoveryResponseEnabledServices.md  ApiDiscoveryResponseLinks.md  ApiDiscoveryResponseLinksGetAllServices.md  ApiDiscoveryResponseLinksGetAllServicesLinks.md  ApiDiscoveryResponseLinksLinks.md  ApiDiscoveryResponseProduct.md  ApiDiscoveryResponseProductProduct.md  ApiDiscoveryResponseService.md  ApiDiscoveryResponseServiceService.md  ApisecurityOperationsApi.md  AsyncResponse.md  AttackReport.md  AttackSignal.md  AttackSource.md  AutomationToken.md  (+1238 more)
src/apis/: acl_api.rs  acl_entry_api.rs  acls_in_compute_api.rs  apex_redirect_api.rs  apisecurity_operations_api.rs  automation_tokens_api.rs  backend_api.rs  diff_api.rs  (+147 more)
(+1126 files in other folders)
