[package]
name = "fastly-api"
version = "3.0.0"
authors = ["Fastly <oss@fastly.com>"]
edition = "2021"
description = "Fastly API client"
license = "MIT"
categories = ["wasm", "web-programming", "api-bindings"]
keywords = ["fastly"]
repository = "https://github.com/fastly/fastly-rust/"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
